<resources>
    <string name="app_name">wind</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">"Sign up "</string>
    <string name="log_in">Log in</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="sign_up_successful">Sign up successful</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="log_in_failed">ID or password is wrong</string>
    <string name="check_network">Check your network connection</string>
    <string name="refresh">Refresh</string>
    <string name="mail">Mail</string>
    <string name="sent">Been sent</string>
    <string name="received">Been received</string>
    <string name="transit">In transit</string>
    <string name="address_manager">Address manager</string>
    <string name="log_out">Log out</string>
    <string name="choose_location">Choose location</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="select_area">Tap to select area</string>
    <string name="full_address">Full address</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="network_error">Check you network and try again</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="remark">Remark</string>
    <string name="confirm_delete">Are you sure delete?</string>
    <string name="confirm">Confirm</string>
    <string name="s">S</string>
    <string name="r">R</string>
    <string name="bindBox">Wait bind</string>
    <string name="in_transmit">In transmit</string>
    <string name="completed">Completed</string>
    <string name="no_package">No package</string>
    <string name="google_maps_key">"AIzaSyDEuablAfotX6vcJppMuLZybwYnSiSBgvI"</string>
    <string name="location">Location</string>
    <string name="temperature">Temperature</string>
    <string name="language">en</string>
    <string name="starting">Starting</string>
    <string name="now_location">Now location</string>
    <string name="confirm_bind">Do you want bind this box?</string>
    <string name="bind_ok">Bind box success!</string>
    <string name="bind_failed">Bind box failed!</string>
    <string name="unbind_ok">Receive success!</string>
    <string name="unbind_failed">Receive failed!</string>

</resources>
