<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/bindBox"
            android:icon="@drawable/ic_send_white_24dp"
            android:title="@string/bindBox" />
        <item
            android:id="@+id/transmit"
            android:icon="@drawable/ic_airport_shuttle_white_24dp"
            android:title="@string/in_transmit" />
        <item
            android:id="@+id/completed"
            android:icon="@drawable/ic_done_white_24dp"
            android:title="@string/completed" />
    </group>
    <group android:id="@+id/group2">
        <item
            android:id="@+id/navAddress"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/address_manager" />
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/log_out" />
    </group>
</menu>